--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,8 +1,9 @@
 name: NordicReload
 main: eu.over9000.nordic.Nordic
-version: 0.1.0
+version: 0.2.0
+load: STARTUP
+loadbefore: [Multiverse-Core, dimension-door, multiworld]
 author: zhehe
-load: POSTWORLD
 api-version: 1.13
 description: Custom Worldgenerator
 commands:
